--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 <div class="col-lg-6">
                     <div class="about-content mt-50">
                         <h5 class="about-title">Hi There! I'm Musa Hesenli</h5>
-                        <p>Hi. I am web developer and mobile application developer, with more than 2 years of experience. In 2019, I entered Baku Engineering University with 602 point from final exam and today I study at here. Since then, I am learning programming. I have been working on different companies as a Developer, and I have created many Projects, except from that I love to create apps on my own. I can learn very fast and  like to learn new technologies and adopt them</p>
+                        <p>I am a person who has very much passion to create web and mobile apps and I just love doing it. If you want to create websites or mobile apps for your business, I am here to help</p>
                         <ul class="clearfix">
                             <li>
                                 <div class="single-info d-flex align-items-center">
@@ -606,11 +606,28 @@
                         </div>
                         <div class="work-overlay">
                             <div class="work-content">
-                                <h3 class="work-title mb-0">React JS notes</h3>
-                                <p class="text-light mb-2">Front-end</p>
+                                <h3 class="work-title mb-0">React JS notes with Django</h3>
+                                <p class="text-light mb-2">Full stack</p>
                                 <ul>
                                     <li><a class="image-popup" href="assets/images/notes.png"><i class="lni-plus"></i></a></li>
                                     <li><a href="https://notes-app-omega.vercel.app/"><i class="lni-link"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div> <!-- single work -->
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="single-work text-center mt-30">
+                        <div class="work-image">
+                            <img src="assets/images/musa-shop.png" alt="work">
+                        </div>
+                        <div class="work-overlay">
+                            <div class="work-content">
+                                <h3 class="work-title mb-0">E-Commerce with React and Django</h3>
+                                <p class="text-light mb-2">Full stack</p>
+                                <ul>
+                                    <li><a class="image-popup" href="assets/images/musa-shop.png"><i class="lni-plus"></i></a></li>
+                                    <li><a href=" https://musa-shop-musa-hesenli.vercel.app"><i class="lni-link"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -633,6 +650,7 @@
                         </div>
                     </div> <!-- single work -->
                 </div>
+                
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-work text-center mt-30">
                         <div class="work-image">
@@ -640,8 +658,8 @@
                         </div>
                         <div class="work-overlay">
                             <div class="work-content">
-                                <h3 class="work-title mb-0">GameEtub with Vue JS</h3>
-                                <p class="text-light mb-2">Front-end</p>
+                                <h3 class="work-title mb-0">Vue JS and Python</h3>
+                                <p class="text-light mb-2">Full stack</p>
                                 <ul>
                                     <li><a class="image-popup" href="assets/images/gameetub.png"><i class="lni-plus"></i></a></li>
                                     <li><a href="https://gameetub.vercel.app/"><i class="lni-link"></i></a></li>
@@ -670,15 +688,15 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-work text-center mt-30">
                         <div class="work-image">
-                            <img src="assets/images/murad.png" alt="work">
+                            <img src="assets/images/gameand.png" alt="work">
                         </div>
                         <div class="work-overlay">
                             <div class="work-content">
                                 <h3 class="work-title mb-0">GameEtub</h3>
                                 <p class="text-light mb-2">Android app</p>
                                 <ul>
-                                    <li><a class="image-popup" href="assets/images/murad.png"><i class="lni-plus"></i></a></li>
-                                    <li><a href="http://muradagro.az/"><i class="lni-link"></i></a></li>
+                                    <li><a class="image-popup" href="assets/images/gameand.png"><i class="lni-plus"></i></a></li>
+                                    <li><a href="https://github.com/Musa-Hesenli/GameEtub"><i class="lni-link"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -687,15 +705,15 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-work text-center mt-30">
                         <div class="work-image">
-                            <img src="assets/images/murad.png" alt="work">
+                            <img src="assets/images/news.png" alt="work">
                         </div>
                         <div class="work-overlay">
                             <div class="work-content">
                                 <h3 class="work-title mb-0">News app</h3>
                                 <p class="text-light mb-2">Android app</p>
                                 <ul>
-                                    <li><a class="image-popup" href="assets/images/murad.png"><i class="lni-plus"></i></a></li>
-                                    <li><a href="http://muradagro.az/"><i class="lni-link"></i></a></li>
+                                    <li><a class="image-popup" href="assets/images/news.png"><i class="lni-plus"></i></a></li>
+                                    <li><a href="https://github.com/Musa-Hesenli/NewsApp"><i class="lni-link"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -704,15 +722,15 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-work text-center mt-30">
                         <div class="work-image">
-                            <img src="assets/images/murad.png" alt="work">
+                            <img src="assets/images/calc.png" alt="work">
                         </div>
                         <div class="work-overlay">
                             <div class="work-content">
                                 <h3 class="work-title mb-0">Calculator app</h3>
                                 <p class="text-light mb-2">Android app</p>
                                 <ul>
-                                    <li><a class="image-popup" href="assets/images/murad.png"><i class="lni-plus"></i></a></li>
-                                    <li><a href="http://muradagro.az/"><i class="lni-link"></i></a></li>
+                                    <li><a class="image-popup" href="assets/images/calc.png"><i class="lni-plus"></i></a></li>
+                                    <li><a href="https://github.com/Musa-Hesenli/AndroidCalculator"><i class="lni-link"></i></a></li>
                                 </ul>
                             </div>
                         </div>
