--- a/index.html
+++ b/index.html
@@ -636,6 +636,23 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-work text-center mt-30">
                         <div class="work-image">
+                            <img src="assets/images/music.png" alt="work">
+                        </div>
+                        <div class="work-overlay">
+                            <div class="work-content">
+                                <h3 class="work-title mb-0">React and Deezer API</h3>
+                                <p class="text-light mb-2">Front-end</p>
+                                <ul>
+                                    <li><a class="image-popup" href="assets/images/music.png"><i class="lni-plus"></i></a></li>
+                                    <li><a href="https://music-player-rose.vercel.app/"><i class="lni-link"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div> <!-- single work -->
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="single-work text-center mt-30">
+                        <div class="work-image">
                             <img src="assets/images/youtube.png" alt="work">
                         </div>
                         <div class="work-overlay">
